--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
     font-family: 'Lato', sans-serif;
     color: #747704;
     font-weight: 300;
+
+    /*font-family: 'Merriweather', serif;*/
 }
 
 .text-muted {
@@ -30,7 +32,9 @@ hr {
     margin: 0 auto;
 }
 footer {
-    margin-top: 20px;
+    /*margin-top: 20px;*/
+    /*margin-bottom: 50em;
+    padding-bottom: 50em;*/
 }
 
 .work-examples {
