--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,10 @@ body {
     /*font-family: 'Merriweather', serif;*/
 }
 
-.text-muted {
+/*.text-muted {
     color: #BCBBBB;
 
-}
+}*/
 
 /* brandico */
 [class*="brandico-"]:before {
@@ -35,7 +35,7 @@ a {
     color: inherit;
 }
 
-.title-logo {
+.header-logo {
     margin-top: 20px;
 }
 
@@ -69,7 +69,7 @@ p.link-addr {
 }
 
 .featured-annoucer {
-    margin-bottom: 2.5em;
+    margin-bottom: 2em;
     margin-top: 3.5em;
 }
 em {
@@ -104,6 +104,18 @@ em {
     padding-bottom: 0;
 }
 
+.name-title {
+    text-align: right;
+}
+
+.featured-annoucer h2 u {
+    text-decoration: none;
+    border-bottom: 2px solid #964b00;
+}
+/*u {
+    text-decoration: none;
+    border-bottom: 2px solid black;
+}*/
 
 
 @media screen and (min-width: 1200px) {
