--- a/css/style.css
+++ b/css/style.css
@@ -69,14 +69,15 @@ em {
     color: black;
 }
 
-.social-links p {
+.s-text-format {
     padding-top: 17px;
     margin-right: 10px;
 }
 
-.social-links a {
+.s-link-format {
     padding: 10px;
 }
+
 
 .project {
     margin-bottom: 4em;
@@ -91,7 +92,7 @@ em {
     text-align: right;
 }
 
-.featured-annoucer h2 u {
+.featured-format {
     text-decoration: none;
     border-bottom: 2px solid #964b00;
 }
