--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ hr {
     text-align: center;
 }
 
-p.link-addr {
+.link-addr {
     font-size: 1em;
 }
 
@@ -77,7 +77,6 @@ em {
 .s-link-format {
     padding: 10px;
 }
-
 
 .project {
     margin-bottom: 4em;
