--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ hr {
 /*Footer Social Links*/
 .social-links {
     display: flex;
+    margin-bottom: 20px;
 }
 
 .brandico-linkedin-rect {
@@ -87,12 +88,27 @@ hr {
 }
 
 .s-text-format {
-    padding-top: 17px;
+    padding: 12px;
     margin-right: 10px;
 }
 
 .s-link-format {
     padding: 10px;
+}
+
+/* .fab {
+    font-size: 22px;
+} */
+.fa-github {
+    color: black;
+    font-size: 27px;
+    /* padding-top: 5px; */
+}
+
+.fa-linkedin {
+    font-size: 27px;
+    color: #0077B5;
+
 }
 
 /*Media Queries*/
